--- a/index.html
+++ b/index.html
@@ -188,26 +188,38 @@
                                     </div>
                                 </div>
                                 <div class="mt-3 text-center">
-                                    <div class="btn-group-vertical d-grid gap-2" role="group">
-                                        <button class="btn btn-success btn-lg btn-modern" id="quickEqualSplit">
-                                            <i class="bi bi-lightning-fill me-2"></i>⚡ 一鍵平均分帳
+                                    <div class="row g-3">
+                                        <!-- 快速平分 -->
+                                        <div class="col-12 col-md-6">
+                                            <div class="d-grid">
+                                                <button class="btn btn-success btn-lg btn-modern" id="quickEqualSplit">
+                                                    <i class="bi bi-lightning-fill me-2"></i>
+                                                    <strong>快速平分</strong>
+                                                    <br><small class="opacity-75">一鍵平均分攤</small>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        
+                                        <!-- 仔細分帳 -->
+                                        <div class="col-12 col-md-6">
+                                            <div class="d-grid">
+                                                <button class="btn btn-primary btn-lg btn-modern" id="detailedSplit">
+                                                    <i class="bi bi-gear-fill me-2"></i>
+                                                    <strong>仔細分帳</strong>
+                                                    <br><small class="opacity-75">按比例、百分比或項目</small>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <!-- 可選功能 -->
+                                    <div class="mt-3">
+                                        <button class="btn btn-outline-secondary btn-sm me-2" id="useLastSettings">
+                                            <i class="bi bi-arrow-clockwise me-1"></i>使用上次設定
                                         </button>
-                                        <div class="btn-group" role="group">
-                                            <button class="btn btn-primary btn-lg btn-modern" id="proceedToSplitBtn">
-                                                <i class="bi bi-calculator me-2"></i>快速分帳
-                                            </button>
-                                            <button class="btn btn-info btn-lg btn-modern" id="startAdvancedSplitting">
-                                                <i class="bi bi-gear-fill me-2"></i>高級分帳
-                                            </button>
-                                        </div>
-                                        <div class="btn-group" role="group">
-                                            <button class="btn btn-outline-secondary btn-sm" id="showSplitSuggestions">
-                                                <i class="bi bi-lightbulb me-1"></i>智能建議
-                                            </button>
-                                            <button class="btn btn-outline-secondary btn-sm" id="useLastSettings">
-                                                <i class="bi bi-arrow-clockwise me-1"></i>使用上次設定
-                                            </button>
-                                        </div>
+                                        <button class="btn btn-outline-secondary btn-sm" id="showHistory">
+                                            <i class="bi bi-clock-history me-1"></i>歷史記錄
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -302,6 +314,7 @@
     <script src="js/group-manager.js"></script>
     <script src="js/advanced-splitting.js"></script>
     <script src="js/quick-actions.js"></script>
+    <script src="js/detailed-splitting.js"></script>
     <script src="js/calculator.js"></script>
     <script src="js/main.js"></script>
 </body>
