--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 配置文件 -->
+    <script src="api-keys.js"></script>
+    <script src="js/config.js"></script>
     <!-- 應用程式 JS -->
     <script src="js/storage.js"></script>
     <script src="js/language-manager.js"></script>
@@ -315,6 +318,7 @@
     <script src="js/advanced-splitting.js"></script>
     <script src="js/quick-actions.js"></script>
     <script src="js/detailed-splitting.js"></script>
+    <script src="js/receipt-splitting.js"></script>
     <script src="js/calculator.js"></script>
     <script src="js/main.js"></script>
 </body>
